--- a/3_lab/nb.ipynb
+++ b/3_lab/nb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -281,6 +281,81 @@
     "sb = SwordBonus() # імплементація бонусів\n",
     "\n",
     "print(sb.bonus_berserk(sw), \"<<<>>>\", sb.bonus_poison(sw))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Вступ до UnitTestig\n",
+    "- це тестування окремих блоків коду що їх функціонування. Передбачається що ми ніколи не розглядаємо як саме реалізований код що тестується, однак ми розуміємо логіку його роботи, та знаємо який результат повинен бути при заданих вхідних даних.\n",
+    "- найпростішим прикладом може бути: маємо код, який повине приймати на вхід стрічку імені а на виході давати фразу \"Привіт Імя\", юніт тестування не вдається як саме ви досягаємо такого результату, нам важливо щоб результат був правильним. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hello_name(name) -> str:\n",
+    "    # тут ми можемо робити все що захочемо\n",
+    "    # Ми можемо реалізувати функцію ось так\n",
+    "    h = \"Hello\" + \" \" + name\n",
+    "    return h\n",
+    "    # Або простіший варіант, ось такий\n",
+    "    #return f\"Hello {name}\"\n",
+    "\n",
+    "# Ця перевірка Твердження, наперед знає що коли ми передаємо значення у функцію ми маємо отримати відомий результат\n",
+    "assert hello_name(\"Богдан\") == \"Hello Богдан\", f'Значення що повертається {hello_name(\"Богдан\")} НЕ має відповідати \"Hello Богдан\"'\n",
+    "assert hello_name(\"НоуНейм\") == str(\"Hello НоуНейм\"), f'Значення що повертається {hello_name(\"НоуНейм\")} НЕ має відповідати \"Hello НоуНейм\"'\n",
+    "# як ми напишемо код щоб досягти цього результату на не важливо (не важливо чи код буде оптимальним, важливо щоб був правильним)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- виконуюч блоки `assert` тестування буде продовжуватись лише до першої помилки, на якій воно зупинеться;\n",
+    "- для того щоб ми могли перевірити всі твердження не зупиняючи програму та в кінці побачити загальну картину який з блоків коду працює не вірно, ми використовуємо вбудований Пайтон модуль який називається `unittest`;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unittest\n",
+    "\n",
+    "# клас для тестування повинен починатись з слова Test\n",
+    "class TestSwordBonus(unittest.TestCase):\n",
+    "    # В даному класі реалізуються всі юніттести у вигляді методів\n",
+    "    # кожен юніттест (назва функції) повинен починатись з преікса імені \"test_\"\n",
+    "    # оскільки ми працюємо в класі, ми працюємо з методами, і маємо вказівник на обєкт self який містить \n",
+    "    # весь функціонал батьківського класу TestCase, з якого ми будемо використовувати перевірки assert\n",
+    "\n",
+    "    def test_bonus_poison(self):\n",
+    "        \"\"\"Тестуємо правильність накладення бафу отрути\"\"\"\n",
+    "        sw = Axe() # створений макет на який можемо накласти баф отрути\n",
+    "        sb = SwordBonus() # імплементація бонусів\n",
+    "\n",
+    "        d = sw.damag # тут ми фіксуємо початкове значення нанесення шкоди\n",
+    "        result = sb.bonus_poison(sw)\n",
+    "        self.assertEqual(result, f\"Застосовано бонус отрути {sw.name}\")\n",
+    "        # після накладення бафу отрути наш демедж має збільшитись\n",
+    "        self.assertGreater(sw.damag, d, \"Накладений бонус отрути не збільшив значення шкоди.\")\n",
+    "\n",
+    "    #def test_isupper(self):\n",
+    "    #    self.assertTrue('FOO'.isupper())\n",
+    "    #    self.assertFalse('Foo'.isupper())\n",
+    "#\n",
+    "    #def test_split(self):\n",
+    "    #    s = 'hello world'\n",
+    "    #    self.assertEqual(s.split(), ['hello', 'world'])\n",
+    "    #    # check that s.split fails when the separator is not a string\n",
+    "    #    with self.assertRaises(TypeError):\n",
+    "    #        s.split(2)\n"
    ]
   }
  ],
