--- a/3_lab/nb.ipynb
+++ b/3_lab/nb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,17 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Наша умова виконалась, твердження є вірним\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# така перевірка assert повністю підпадає під конструкцію блоку if\n",
     "if a == b:\n",
@@ -61,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,18 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'NoneType'>\n",
-      "Перевіряємо вивід функції 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ми можемо писати комплексні перевірки у вигляді функцій та використовувати ці функції як твердження\n",
     "def check(n):\n",
@@ -135,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,17 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Застосовано бонус Берсерка Сокира <<<>>> Застосовано бонус отрути Сокира\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sw = Axe() # створений макет меча\n",
     "sb = SwordBonus() # імплементація бонусів\n",
@@ -294,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,46 +291,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- виконуюч блоки `assert` тестування буде продовжуватись лише до першої помилки, на якій воно зупинеться;\n",
-    "- для того щоб ми могли перевірити всі твердження не зупиняючи програму та в кінці побачити загальну картину який з блоків коду працює не вірно, ми використовуємо вбудований Пайтон модуль який називається `unittest`;"
+    "- виконуючи блоки `assert` тестування буде продовжуватись лише до першої помилки, на якій воно зупинеться;\n",
+    "- для того щоб ми могли перевірити всі твердження не зупиняючи програму та в кінці побачити загальну картину який з блоків коду працює не вірно, ми використовуємо вбудований Пайтон модуль який називається `unittest`;\n",
+    "- "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ні\n"
+     ]
+    }
+   ],
    "source": [
-    "import unittest\n",
-    "\n",
-    "# клас для тестування повинен починатись з слова Test\n",
-    "class TestSwordBonus(unittest.TestCase):\n",
-    "    # В даному класі реалізуються всі юніттести у вигляді методів\n",
-    "    # кожен юніттест (назва функції) повинен починатись з преікса імені \"test_\"\n",
-    "    # оскільки ми працюємо в класі, ми працюємо з методами, і маємо вказівник на обєкт self який містить \n",
-    "    # весь функціонал батьківського класу TestCase, з якого ми будемо використовувати перевірки assert\n",
-    "\n",
-    "    def test_bonus_poison(self):\n",
-    "        \"\"\"Тестуємо правильність накладення бафу отрути\"\"\"\n",
-    "        sw = Axe() # створений макет на який можемо накласти баф отрути\n",
-    "        sb = SwordBonus() # імплементація бонусів\n",
-    "\n",
-    "        d = sw.damag # тут ми фіксуємо початкове значення нанесення шкоди\n",
-    "        result = sb.bonus_poison(sw)\n",
-    "        self.assertEqual(result, f\"Застосовано бонус отрути {sw.name}\")\n",
-    "        # після накладення бафу отрути наш демедж має збільшитись\n",
-    "        self.assertGreater(sw.damag, d, \"Накладений бонус отрути не збільшив значення шкоди.\")\n",
-    "\n",
-    "    #def test_isupper(self):\n",
-    "    #    self.assertTrue('FOO'.isupper())\n",
-    "    #    self.assertFalse('Foo'.isupper())\n",
-    "#\n",
-    "    #def test_split(self):\n",
-    "    #    s = 'hello world'\n",
-    "    #    self.assertEqual(s.split(), ['hello', 'world'])\n",
-    "    #    # check that s.split fails when the separator is not a string\n",
-    "    #    with self.assertRaises(TypeError):\n",
-    "    #        s.split(2)\n"
+    "# первіряємо чи ми можемо шукати слово у реченні для того щоб використати assetIn\n",
+    "if \"Слово\" in \"Те є різні слова а нам треба Речення\":\n",
+    "    print(\"Так\")\n",
+    "else:\n",
+    "    print(\"Ні\")\n"
    ]
   }
  ],
