--- a/3_lab/nb.ipynb
+++ b/3_lab/nb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Наша умова виконалась, твердження є вірним\n"
+     ]
+    }
+   ],
    "source": [
     "# така перевірка assert повністю підпадає під конструкцію блоку if\n",
     "if a == b:\n",
@@ -53,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'NoneType'>\n",
+      "Перевіряємо вивід функції 2\n"
+     ]
+    }
+   ],
    "source": [
     "# ми можемо писати комплексні перевірки у вигляді функцій та використовувати ці функції як твердження\n",
     "def check(n):\n",
@@ -118,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +265,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Застосовано бонус Берсерка Сокира <<<>>> Застосовано бонус отрути Сокира\n"
+     ]
+    }
+   ],
    "source": [
     "sw = Axe() # створений макет меча\n",
     "sb = SwordBonus() # імплементація бонусів\n",
@@ -269,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,12 +318,22 @@
    "source": [
     "- виконуючи блоки `assert` тестування буде продовжуватись лише до першої помилки, на якій воно зупинеться;\n",
     "- для того щоб ми могли перевірити всі твердження не зупиняючи програму та в кінці побачити загальну картину який з блоків коду працює не вірно, ми використовуємо вбудований Пайтон модуль який називається `unittest`;\n",
-    "- "
+    "- також можна використовувати сторонні бібліотеки для роботи з тестами, і такою бібліотекою є `PyTest`;\n",
+    "- найчастіше коли говорять про тести, якраз говорять про використання `PyTest`, бо вона зручна, потужна та функціональна. Ті тести що написані через `unittest` є повністю сімісними з `PyTest`;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Робота з `PyTest`\n",
+    "- щоб інсталювати та працювати з бібліотекою `PyTest` нам потрібно віртуальне середовище;\n",
+    "- на потрібно `dev` середовище, томущо тестування потрібне лише на етапі розробки;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
