--- a/3_lab/nb.ipynb
+++ b/3_lab/nb.ipynb
@@ -332,24 +332,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ні\n"
-     ]
-    }
-   ],
    "source": [
-    "# первіряємо чи ми можемо шукати слово у реченні для того щоб використати assetIn\n",
-    "if \"Слово\" in \"Те є різні слова а нам треба Речення\":\n",
-    "    print(\"Так\")\n",
-    "else:\n",
-    "    print(\"Ні\")\n"
+    "### Робота з `coverage`\n",
+    "- наша розроблена програма має лише ~300 рядків коду, і ми вже починаємо губитись, що ми змогли протестувати, до яких саме функцій вже написані тести а до яких ні...\n",
+    "- а ось наприклад великі проекти мають набагато більше коду, для прикладу\n",
+    "> Гра \"Відьмак\" (або \"The Witcher\") - це великий проект з великою кількістю рядків коду. Однак точна кількість рядків може варіюватися залежно від версії гри, використовуваних бібліотек та різноманітних модифікацій. Наприклад, у \"Відьмаку 3: Дика полювання\" було близько 1 мільйона рядків коду. Але це оцінка, яка може бути наближена. Компанія CD Projekt Red, яка розробляла гру, не робить цієї інформації повністю доступною.\n",
+    "- тустувальнику стає дуже склано шукати та розуміти, яку саме частину коду вже було протестовано а яку ні. Тут нам на допомогу приходить бібліотека `coverage` - вона використовується щоб візуально або у вигляді процентів представити де вже є покриття коду тестами а де ще немає;\n",
+    "- для роботи з цим функціоналом ми встановлюємо бібліотеку `pytest-cov`;\n",
+    "```bash\n",
+    "pipenv install pytest-cov --dev\n",
+    "```\n",
+    "- Запутити виконання тестів та відслідковувати покриття можна за допомогою команди\n",
+    "```bash\n",
+    "coverage run -m pytest test.py\n",
+    "```\n",
+    "- Вивести результат покриття тестами у процентному співвідношенні з номерами рядків які ще не протестовані можна командою\n",
+    "```bash\n",
+    "coverage report -m\n",
+    "```\n",
+    "- даний репорт нам дає представлення у яких файлах є написаний код, до якого ще немає тестів;\n",
+    "- а для візуального рпедставлення, можна згенерувати репорт у вигляді html сторінки а не просто тексту виведеного у консоль\n",
+    "```bash\n",
+    "coverage html\n",
+    "```\n",
+    "- після того як ми підствітили код який ще не протестований і захотіли протестувати правильність накладення банусів для Легендарної якості предмета, ми знайшли багу - бонус не накладається (не збільшує атрибути, хоча записується що він накладений);\n",
+    "- тест є правильний, атрибути повині збільшуватись, отже цю багу потрібно модифіковувати  в нашому коді гри та зробити щоб атрибути збільшувались відповідно до накладеного бонусу;\n",
+    "- ми помітили неробочий код `TODO`;"
    ]
   }
  ],
