--- a/3_lab/nb.ipynb
+++ b/3_lab/nb.ipynb
@@ -359,7 +359,8 @@
     "```\n",
     "- після того як ми підствітили код який ще не протестований і захотіли протестувати правильність накладення банусів для Легендарної якості предмета, ми знайшли багу - бонус не накладається (не збільшує атрибути, хоча записується що він накладений);\n",
     "- тест є правильний, атрибути повині збільшуватись, отже цю багу потрібно модифіковувати  в нашому коді гри та зробити щоб атрибути збільшувались відповідно до накладеного бонусу;\n",
-    "- ми помітили неробочий код `TODO`;"
+    "- (все було справлено) ми помітили неробочий код `TODO`;\n",
+    "- створили новий файл де здійснили конфігурацію `coverage` і виключили файл з тестами з загального звіту;\n"
    ]
   }
  ],
