--- a/3_lab/nb.ipynb
+++ b/3_lab/nb.ipynb
@@ -346,7 +346,10 @@
     "```\n",
     "- Запутити виконання тестів та відслідковувати покриття можна за допомогою команди\n",
     "```bash\n",
-    "coverage run -m pytest test.py\n",
+    "pipenv shell\n",
+    "coverage run -m pytest -vra test.py\n",
+    "# АБО не заходячи у віртуальне середовище\n",
+    "pipenv run coverage run -m pytest -vra test.py\n",
     "```\n",
     "- Вивести результат покриття тестами у процентному співвідношенні з номерами рядків які ще не протестовані можна командою\n",
     "```bash\n",
@@ -360,7 +363,19 @@
     "- після того як ми підствітили код який ще не протестований і захотіли протестувати правильність накладення банусів для Легендарної якості предмета, ми знайшли багу - бонус не накладається (не збільшує атрибути, хоча записується що він накладений);\n",
     "- тест є правильний, атрибути повині збільшуватись, отже цю багу потрібно модифіковувати  в нашому коді гри та зробити щоб атрибути збільшувались відповідно до накладеного бонусу;\n",
     "- (все було справлено) ми помітили неробочий код `TODO`;\n",
-    "- створили новий файл де здійснили конфігурацію `coverage` і виключили файл з тестами з загального звіту;\n"
+    "- створили новий файл де здійснили конфігурацію `coverage` і виключили файл з тестами з загального звіту;\n",
+    "> спочатку створили файл `setup.cfg` однак це старий варіант конфігурації, краще використовувати `.coveragerc`;\n",
+    "> в `.coveragerc` зади більш розширену конфігурацію;\n",
+    "- кожного разу звіт та покриття буде змінюватись, і зазвичай на проектах встановлюють якесь золоте значення до якого потрібно стремитись, наприклад 85% (в нас поки 62%);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Пробуємо підстановки (fixtures)\n",
+    "- в певних тестах потрібно взаємодіяти з іншими система, і щоб уникнути впливу на тест сторонніх факторів, ми можемо використовувати fixtures щоб емулювати відповіді або роботу зовнішніх систем;\n",
+    "- одним з таких прикладів є взаємодія з гравцем коли ми чекаємо його відповіді або введених даних;"
    ]
   }
  ],
