write new test for negative effects

--- a/3_lab/nb.ipynb
+++ b/3_lab/nb.ipynb
@@ -377,6 +377,59 @@
     "- в певних тестах потрібно взаємодіяти з іншими система, і щоб уникнути впливу на тест сторонніх факторів, ми можемо використовувати fixtures щоб емулювати відповіді або роботу зовнішніх систем;\n",
     "- одним з таких прикладів є взаємодія з гравцем коли ми чекаємо його відповіді або введених даних;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Машини нас ніколи не замінять, оськільки ChatGPT видаю ось таку балібарду\n",
+    "Ось приклад тесту з використанням PyTest для перевірки правильності роботи функції `negative_effects`:\n",
+    "\n",
+    "```python\n",
+    "from your_module import negative_effects\n",
+    "\n",
+    "def test_negative_effects():\n",
+    "    \"\"\"Перевіряємо правильність роботи функції negative_effects.\"\"\"\n",
+    "    # Перевірка для значення r=0\n",
+    "    assert negative_effects(\"test_effect\") == False\n",
+    "\n",
+    "    # Перевірка для значення r=1\n",
+    "    assert negative_effects(\"test_effect\") == False\n",
+    "\n",
+    "    # Перевірка для значення r=2\n",
+    "    assert negative_effects(\"test_effect\") == False\n",
+    "\n",
+    "    # Перевірка для значення r=3\n",
+    "    assert negative_effects(\"test_effect\") == True\n",
+    "\n",
+    "    # Перевірка для значення r=4\n",
+    "    assert negative_effects(\"test_effect\") == True\n",
+    "```\n",
+    "\n",
+    "У цьому тесті ми перевіряємо правильність поведінки функції `negative_effects` для різних значень, які можуть бути згенеровані випадковим чином. Якщо функція працює правильно, тести пройдуть успішно, в іншому випадку, вони викинуть помилку.\n",
+    "\n",
+    "\n",
+    "### Навіть у другому випадку він зробив неправильно\n",
+    "Ось як можна написати тест з використанням PyTest для перевірки роботи функції `negative_effects`:\n",
+    "\n",
+    "```python\n",
+    "from your_module import negative_effects\n",
+    "\n",
+    "def test_negative_effects():\n",
+    "    \"\"\"Тестуємо функцію negative_effects на випадкових значеннях.\"\"\"\n",
+    "    # Перевірка, що функція повертає значення типу bool\n",
+    "    assert isinstance(negative_effects(\"test_name\"), bool)\n",
+    "\n",
+    "    # Перевірка, що функція працює коректно для всіх можливих значень випадкового числа\n",
+    "    for r in range(5):\n",
+    "        expected_result = r > 2\n",
+    "        assert negative_effects(\"test_name\") == expected_result\n",
+    "```\n",
+    "\n",
+    "У цьому тесті ми перевіряємо дві речі:\n",
+    "1. Чи функція повертає значення типу bool.\n",
+    "2. Чи функція повертає очікувані значення True або False в залежності від результату випадкового числа r."
+   ]
   }
  ],
  "metadata": {
